--- a/Armageddon Steel Legionnaires/Data/Core/Languages/English/Units.xml
+++ b/Armageddon Steel Legionnaires/Data/Core/Languages/English/Units.xml
@@ -30,7 +30,7 @@
 	<entry name="AstraMilitarum/ArmageddonBasiliskDescription" value="Slower but tougher Basilisk with a closed top. Better suited for defence."/>
 	<entry name="AstraMilitarum/ArmageddonBasiliskFlavor" value="Armageddon, true to its name, is an inhospitable wasteland. As such, vehicles designed to operate on it and other similar planets are enclosed to protect the crew."/>
 	<!-- Heroes -->
-	<entry name="AstraMilitarum/FortressOfArrogance" value="Fortress of Arrogance"/>
+	<entry name="AstraMilitarum/FortressOfArrogance" value="The Fortress of Arrogance"/>
 	<entry name="AstraMilitarum/FortressOfArroganceDescription" value=""/>
 	<entry name="AstraMilitarum/FortressOfArroganceFlavor" value=""/>
 	<entry name="AstraMilitarum/SteelLegionCommissar" value="Steel Legion Commissar"/>
