PURGE THE XENOS

--- a/Armageddon Steel Legionnaires/Data/Core/Languages/English/Actions.xml
+++ b/Armageddon Steel Legionnaires/Data/Core/Languages/English/Actions.xml
@@ -23,4 +23,7 @@
 	<entry name="AstraMilitarum/SteelLegionDiscipline+" value="<string name='Actions/AstraMilitarum/SteelLegionDiscipline'/>"/>
 	<entry name="AstraMilitarum/SteelLegionDiscipline+Description" value="Buffs nearby infantry and vehicles within 2 tiles, with greater effect to adjacent units and to members of the Steel Legion. All units gain accuracy and morale, with Steel Legion units having reduced morale loss and further increased accuracy. Infantry gain ranged damage reduction, with Steel Legion units gaining armour."/>
 	<entry name="AstraMilitarum/SteelLegionDiscipline+Flavor" value="Commissar Yarrick ordered the construction of an armoured dome on top of The Fortress of Arrogance's turret, where he stands to deliver orders and rousing speeches. He doesn't need threats of execution; his mere presence lifts spirits. Members of the Steel Legion redouble their efforts, eager to serve under their planetary hero."/>
+	<entry name="AstraMilitarum/PurgeTheXenos" value="<string name='Traits/AstraMilitarum/PurgeTheXenos'/>"/>
+	<entry name="AstraMilitarum/PurgeTheXenosDescription" value="<string name='Traits/AstraMilitarum/PurgeTheXenosDescription'/> Burns away Orkoid Fungus within 2 tiles."/>
+	<entry name="AstraMilitarum/PurgeTheXenosFlavor" value="<string name='Traits/AstraMilitarum/PurgeTheXenosFlavor'/>"/>
 </language>
