--- a/Armageddon Steel Legionnaires/Data/Core/Languages/English/Units.xml
+++ b/Armageddon Steel Legionnaires/Data/Core/Languages/English/Units.xml
@@ -31,9 +31,9 @@
 	<entry name="AstraMilitarum/ArmageddonBasiliskFlavor" value="Armageddon, true to its name, is an inhospitable wasteland. As such, vehicles designed to operate on it and other similar planets are enclosed to protect the crew."/>
 	<!-- Heroes -->
 	<entry name="AstraMilitarum/FortressOfArrogance" value="The Fortress of Arrogance"/>
-	<entry name="AstraMilitarum/FortressOfArroganceDescription" value=""/>
-	<entry name="AstraMilitarum/FortressOfArroganceFlavor" value=""/>
+	<entry name="AstraMilitarum/FortressOfArroganceDescription" value="Unique super-heavy command tank that inspires nearby allies."/>
+	<entry name="AstraMilitarum/FortressOfArroganceFlavor" value="After the Second War for Armageddon, Commissar Sebastian Yarrick requisitioned a Baneblade and dubbed it &quot;The Fortress of Arrogance.&quot; He rode it into battle, spearheading the hunt for Ghazghkull Thraka. However, he was forced to abandon it due to extensive damages. He enacted the successful Operation Thunderstorm to reclaim it. Now reunited with his beloved super-heavy, he ordered the construction of a holy domed stand on the turret, installation of improved communications equipment, and painting of it in the somber blacks of the Commissariat."/>
 	<entry name="AstraMilitarum/SteelLegionCommissar" value="Steel Legion Commissar"/>
-	<entry name="AstraMilitarum/SteelLegionCommissarDescription" value=""/>
-	<entry name="AstraMilitarum/SteelLegionCommissarFlavor" value=""/>
+	<entry name="AstraMilitarum/SteelLegionCommissarDescription" value="<string name='Units/AstraMilitarum/LordCommissar'/> Uses passive buffs that affects infantry and vehicles, especially for members of the Steel Legion."/>
+	<entry name="AstraMilitarum/SteelLegionCommissarFlavor" value="The Steel Legion's operations require stellar cooperation between the infantry and vehicles, leaving little room for undisciplined troops. Steel Legion Commissars have become adept at cracking down on both types of troops. While tankers may feel safe inside their armoured hulls, everyone needs to sleep, and being dragged up the hatch by your hair is quite the unpleasant experience. Once outside, tank crews are flesh and bone like any other, and bolt shells don't discriminate. Rumours tell the tale that one crew was even flattened by their own Leman Russ tank, with orders given to leave their blood and guts unwashed."/>
 </language>
