--- a/Armageddon Steel Legionnaires/Data/Core/Languages/English/Traits.xml
+++ b/Armageddon Steel Legionnaires/Data/Core/Languages/English/Traits.xml
@@ -60,4 +60,10 @@
 	<entry name="FoABringItDown" value="<string name='Actions/BringItDown'/>"/>
 	<entry name="FoABringItDownDescription" value="Unit takes increased damage, moreso if it's a super-heavy or a hero, with the effect stacking. Has reduced ranged reduction when being attacked by the Steel Legion."/>
 	<entry name="FoABringItDownFlavor" value="Whenever Old Bale Eye needs a priority target taken down, he only needs to use his Vox Caster."/>
+	<entry name="DuelOfHonour" value="Duel of Honour"/>
+	<entry name="DuelOfHonourDescription" value="Each unit only takes damage from another duelling unit. On death, cripples allied morale and boosts enemy morale."/>
+	<entry name="DuelOfHonourFlavor" value="Reminiscent of Yarrick's duel in the defence of Hive Hades, challenging an enemy leader in a duel is a double-edged sword. In victory, it can be what turns the tides, making the enemy tuck tail and run with your troops in hot pursuit. In defeat, it can be what loses a crucial battle, and in turn, an Imperial planet."/>
+	<entry name="DuelOfHonourShield" value="Duel of Honour Standoff"/>
+	<!-- <entry name="DuelOfHonourShieldDescription" value=""/> -->
+	<entry name="DuelOfHonourShieldFlavor" value="A duel that ends in one blow is no duel; it is an execution. Opponents seldom strike with full force in the opening attack, measuring enemy response."/>
 </language>
