names are plural

--- a/Drookian Fen Guard/Data/Core/Languages/English/Units.xml
+++ b/Drookian Fen Guard/Data/Core/Languages/English/Units.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <language>
-    <entry name="AstraMilitarum/DrookianFenGuardsmen" value="Drookian Fen Guardsman"/>
+    <entry name="AstraMilitarum/DrookianFenGuardsmen" value="Drookian Fen Guardsmen"/>
     <entry name="AstraMilitarum/DrookianFenGuardsmenDescription" value="Light infantry focussed on ambushing and harassing the enemy. Smaller squad size, but faster, more accurate, and can more easily demolish enemy machines."/>
     <entry name="AstraMilitarum/DrookianFenGuardsmenFlavor" value="After years of being soaked and trekking through mud, even the typical Drookian Fen Guardsman can easily maneuver through tough terrain."/>
-    <entry name="AstraMilitarum/DrookianStormtrooper" value="Drookian Stormtroper"/>
+    <entry name="AstraMilitarum/DrookianStormtrooper" value="Drookian Stormtroopers"/>
     <entry name="AstraMilitarum/DrookianStormtrooperDescription" value="Elite light infantry. Weaker, but sneakier than a regular Tempestus Scion."/>
     <entry name="AstraMilitarum/DrookianStormtrooperFlavor" value="With enough firepower, a routine ambush can turn into a decimated enemy division."/>
-    <entry name="AstraMilitarum/DrookianScout" value="Drookian Scout"/>
+    <entry name="AstraMilitarum/DrookianScout" value="Drookian Scouts"/>
     <entry name="AstraMilitarum/DrookianScoutDescription" value="Even lighter infantry with greater emphasis on scouting and harassment. Can ambush enemies to steal resources. Can infiltrate after researching Substructure Extension."/>
     <entry name="AstraMilitarum/DrookianScoutFlavor" value="The most agile soldiers of the Fen Guard, traversing through rough terrain like water."/>
-    <entry name="AstraMilitarum/DrookianAssassin" value="Drookian Assassin"/>
+    <entry name="AstraMilitarum/DrookianAssassin" value="Drookian Assassins"/>
     <entry name="AstraMilitarum/DrookianAssassinDescription" value="Light melee infantry trained to exploit exposed infantry and to take down heroes. Can infiltrate after researching Substructure Extension."/>
     <entry name="AstraMilitarum/DrookianAssassinFlavor" value="When night falls, sentries continue to patrol the perimeter, bored out of their minds. When day breaks, the outpost is devoid of life."/>
     <entry name="AstraMilitarum/DrookianHoverChimera" value="Drookian Hover-Chimera"/>
