--- a/Drookian Fen Guard/Data/Core/Languages/English/Actions.xml
+++ b/Drookian Fen Guard/Data/Core/Languages/English/Actions.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <language>
     <entry name="AstraMilitarum/BacklineHarassment" value="Backline Harassment"/>
-    <entry name="AstraMilitarum/BacklineHarassmentDescription" value="Disrupt an enemy's combat effectiveness. Temporarily gain Stealth to escape."/>
+    <entry name="AstraMilitarum/BacklineHarassmentDescription" value="Disrupt an enemy's combat effectiveness."/>
     <entry name="AstraMilitarum/BacklineHarassmentFlavor" value="Drookians have mastered the art of nighttime raids, balancing frequency to maximize both self-preservation and psychological damage upon the enemy."/>
     <entry name="AstraMilitarum/Waylay" value="Waylay"/>
     <entry name="AstraMilitarum/WaylayDescription" value="Slow down an enemy and steal their resources. Greatly demoralizes the enemy."/>
