--- a/Jopall Indentured Squadrons/Data/Core/Languages/English/Traits.xml
+++ b/Jopall Indentured Squadrons/Data/Core/Languages/English/Traits.xml
@@ -12,4 +12,9 @@
     <entry name="AstraMilitarum/MuggingSpoils" value="Spoils of Crime"/>
 	<entry name="AstraMilitarum/MuggingSpoilsDescription" value="This unit generates influence after shaking down an ally."/>
 	<entry name="AstraMilitarum/MuggingSpoilsFlavor" value="The snakes from Jopall gleefully count their ill-gotten gains, without a care for the troopers they left bruised and bloody."/>
+	<!-- Charge up and down -->
+	<entry name="AstraMilitarum/JopallChargeUp" value="Overcharged Weapon"/>
+	<entry name="AstraMilitarum/JopallChargeUpFlavor" value="<string name='Actions/JopallChargeUpFlavor'/>"/>
+	<entry name="AstraMilitarum/JopallChargeDown" value="Undercharged Weapon"/>
+	<entry name="AstraMilitarum/JopallChargeDownFlavor" value="<string name='Actions/JopallChargeUpFlavor'/>"/>
 </language>
