--- a/Jopall Indentured Squadrons/Data/Core/Languages/English/Actions.xml
+++ b/Jopall Indentured Squadrons/Data/Core/Languages/English/Actions.xml
@@ -8,9 +8,9 @@
 	<entry name="AstraMilitarum/RepositionFlavor" value="Marksmen are trained to reposition after every shot, to avoid enemy counteraction."/>
 	<!-- Charge Shots -->
 	<entry name="AstraMilitarum/JopallChargeUp" value="Overcharge"/>
-	<entry name="AstraMilitarum/JopallChargeUpDescription" value="Increase damage dealt and resources spent."/>
+	<entry name="AstraMilitarum/JopallChargeUpDescription" value="Does not consume Action. Increase damage dealt and resources spent."/>
 	<entry name="AstraMilitarum/JopallChargeUpFlavor" value="Every shot counts. Literally. Members of the Jopall Indentured Squadrons are even billed for the resources spent from taking a shot. The exact amount of charge used can adjusted, and shrewd marksmen make use of this ability to minimise their costs."/>
 	<entry name="AstraMilitarum/JopallChargeDown" value="Reduce Charge"/>
-	<entry name="AstraMilitarum/JopallChargeDownDescription" value="Decreases damage dealt. Gain Influence next turn."/>
+	<entry name="AstraMilitarum/JopallChargeDownDescription" value="Does not consume Action. Decreases damage dealt. Gain Influence next turn."/>
 	<entry name="AstraMilitarum/JopallChargeDownFlavor" value="<string name='Actions/AstraMilitarum/JopallChargeUpFlavor'/>"/>
 </language>
